--- a/Layouts/room-13 (start) (Jplay).xml
+++ b/Layouts/room-13 (start) (Jplay).xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-13 (start) (Jplay)</name>
     <sid>4916339037974507</sid>
-    <event-sheet></event-sheet>
+    <event-sheet>room-13 (start)</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
